Failed rendering with GPU Pitcairn #49846

Closed
opened 2016-10-26 01:01:28 +02:00 by mike w. · 12 comments

System Information
Windows 7 x64 AMD R9 270 driver version: 16.10.2

Blender Version
Broken: blender-2.78-10a25b6-win64
Working: 2.76rc2

Blender says: "Failed loading render kernel, see console for errors", every time i try to render with my GPU

Notes: I loaded factory settings and the only thing i did after that was clicking the option "OpenCL" to enable gpu rendering.

Edit1: I repeated the process with the 2.77 version of Blender, and I found out that it doesn't work either, then I tried with 2.76rc2 and that worked.

Console log:

Compiling OpenCL program base
OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console.
OpenCL program base build output: "C:\Programs\Blender\blender-2.78-10a25b6-wi
n64\blender-2.78.0-git.10a25b6-windows64\2.78\scripts\addons\cycles\kernel\kerne
ls/opencl../../kernel_projection.h", line 238: error:

        expression must have pointer-to-struct-or-union type
              float altitude = fabsf(safe_asinf(D->z));
                               ^

1 error detected in the compilation of "C:\Users%username%\AppData\Local\Temp\OCL
4264T2.cl".
Frontend phase failed compilation.

Error: Failed loading render kernel, see console for errors

**System Information** Windows 7 x64 AMD R9 270 driver version: 16.10.2 **Blender Version** Broken: blender-2.78-10a25b6-win64 Working: 2.76rc2 Blender says: "Failed loading render kernel, see console for errors", every time i try to render with my GPU Notes: I loaded factory settings and the only thing i did after that was clicking the option "OpenCL" to enable gpu rendering. Edit1: I repeated the process with the 2.77 version of Blender, and I found out that it doesn't work either, then I tried with 2.76rc2 and that worked. Console log: Compiling OpenCL program base OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console. OpenCL program base build output: "C:\Programs\Blender\blender-2.78-10a25b6-wi n64\blender-2.78.0-git.10a25b6-windows64\2.78\scripts\addons\cycles\kernel\kerne ls/opencl\../../kernel_projection.h", line 238: error: ``` expression must have pointer-to-struct-or-union type float altitude = fabsf(safe_asinf(D->z)); ^ ``` 1 error detected in the compilation of "C:\Users\%username%\AppData\Local\Temp\OCL 4264T2.cl". Frontend phase failed compilation. Error: Failed loading render kernel, see console for errors
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mikewazowski11

Added subscriber: @mikewazowski11

#50053 was marked as duplicate of this issue

#50053 was marked as duplicate of this issue

#49853 was marked as duplicate of this issue

#49853 was marked as duplicate of this issue

Added subscriber: @mutant0407

Added subscriber: @mutant0407

Added subscriber: @TomG

Added subscriber: @TomG

I can't render on AMD 7870 with Blender 2.78a official release.
Drivers: Crimson 10.2
Win 10 x64
pitcairn.png

I can't render on AMD 7870 with Blender 2.78a official release. Drivers: Crimson 10.2 Win 10 x64 ![pitcairn.png](https://archive.blender.org/developer/F388215/pitcairn.png)

This issue was referenced by blender/cycles@5bb349a14d

This issue was referenced by blender/cycles@5bb349a14d97ced0132656cfce7ce49ef979d928

This issue was referenced by 5aa6a2ec06

This issue was referenced by 5aa6a2ec06bbfa9ddd255c90ee02da5f9be36f30
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @nacioss, @LukasStockner, @Stoenk

Added subscribers: @nacioss, @LukasStockner, @Stoenk

Added subscribers: @Vortex333, @VukGardasevic

Added subscribers: @Vortex333, @VukGardasevic
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49846
No description provided.