Fix T49846: OpenCL rendering compilation failure